feat(exec): Add components - MealList, Meal, Counter

--- a/12-meals/src/assets/main.css
+++ b/12-meals/src/assets/main.css
@@ -5,9 +5,10 @@
 }
 
 html {
-    font-size: calc(100vm / 750);
+    font-size: calc(100vw / 750);
 }
 
 img {
-    width: 30vw;
+    width: 100%;
+    vertical-align: middle;
 }
